<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eff2f6"
    android:id="@+id/layout_register">
    <include layout="@layout/common_head_title_white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="#fff">
            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_account"/>
            <EditText
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_username"
                android:background="@null"
                android:hint="@string/user_name"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="18sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="5dp"
            android:background="#fff">
            <ImageView
                android:id="@+id/iv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_account"/>
            <EditText
                android:id="@+id/tv_nick"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_nick"
                android:background="@null"
                android:hint="@string/nickname"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="18sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="5dp"
            android:background="#fff">
            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_pwd"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_password"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="18sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="5dp"
            android:background="#fff">
            <ImageView
                android:id="@+id/iv_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_pwd"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_password2"
                android:background="@null"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="18sp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/tb_btn_login_orange_normal"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>