<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eff2f6"
    android:id="@+id/layout_upload_avatar">
    <include layout="@layout/common_head_title_white" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/common_head_title_white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/layout_user_profile_avatar"
            android:layout_width="fill_parent"
            android:layout_height="80dp">
            <ImageView
                android:id="@+id/user_arrow0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/right_arrow_icon"/>
            <ImageView
                android:id="@+id/iv_user_profile_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_toLeftOf="@id/user_arrow0"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/contactlogo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="11dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/user_profile_avatar"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_pressed" />
        <RelativeLayout
            android:id="@+id/layout_user_profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="#fff"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <ImageView
                android:id="@+id/user_arrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/right_arrow_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="11dp"
                android:layout_alignParentLeft="true"
                android:text="@string/user_name"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/user_arrow1"
                android:layout_margin="5dp"
                android:paddingLeft="34dp"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:background="#FFF"
                android:textColor="#808080"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_pressed" />
        <RelativeLayout
            android:id="@+id/layout_user_profile_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="#fff"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <ImageView
                android:id="@+id/user_arrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/right_arrow_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingLeft="11dp"
                android:layout_alignParentLeft="true"
                android:text="@string/user_name"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_user_profile_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/user_arrow2"
                android:layout_margin="5dp"
                android:paddingLeft="34dp"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:background="#FFF"
                android:textColor="#808080"/>
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tb_btn_login_orange_normal"
        android:gravity="center"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:text="@string/logout"
        android:textColor="#fff"
        android:textSize="18sp"/>
</RelativeLayout>